Add fonts in html and define the CSS base for body.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
         <meta name="description" content="Site de précommande de menu et de réservation, restaurant de luxe.">
         <title>Ohmyfood!</title>
         <!-- <link rel="icon" type="image/png" href=""> -->
+        <!-- Google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Roboto Regular/Bold -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <!-- Shrikhand-->
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <script src="https://kit.fontawesome.com/e59eb18cc2.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
+
+    <body>
+        <!-- Component -->
+        <header>
+        </header>
+
+        <!-- <footer>
+        </footer> -->
+    </body>
 </html>
