Add text header and create div location.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <body>
         <!-- Component -->
         <header>
+            <!-- texte -->
+            <h1>ohmyfood</h1>
         </header>
+
+        <div class="location">
+            Paris, bellville
+        </div>
 
         <!-- <footer>
         </footer> -->
