--- a/index.html
+++ b/index.html
@@ -19,16 +19,33 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
+    <!-- HOME PAGE -->
     <body>
-        <!-- Component -->
+        <!-- Layout header -->
         <header>
-            <!-- texte -->
             <h1>ohmyfood</h1>
         </header>
 
-        <div class="location">
+        <!-- Location -->
+        <div class="location text-align-center">
             Paris, bellville
         </div>
+
+        <!-- Call to action -->
+        <section class="call-to-action text-align-center">
+            <h2 class="call-to-action__h2">
+                Réservez le menu qui vous convient
+            </h2>
+
+            <p class="call-to-action__paragraph">
+                Découvrez des restaurents d'exception, sélectionnés par nos soins.
+            </p>
+
+            <!-- Component call to action button -->
+            <button class="comp-call-to-action-btn">
+                Explorer nos restaurants
+            </button>
+        </section>
 
         <!-- <footer>
         </footer> -->
