--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
         <meta name="viewport" centent="width=device-width; initial-scale=1.0">
         <meta name="description" content="Site de précommande de menu et de réservation, restaurant de luxe.">
         <title>Ohmyfood!</title>
-        <!-- <link rel="icon" type="image/png" href=""> -->
+        <link rel="icon" type="image/png" href="./assets/logo/ohmyfood.png">
         <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- Roboto Regular/Bold -->
+        <!-- Fonts : Roboto Regular/Bold -->
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-        <!-- Shrikhand-->
+        <!-- Fonts : Shrikhand -->
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <!-- Normalize -->
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <!-- Fontaweson -->
         <script src="https://kit.fontawesome.com/e59eb18cc2.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
