--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" centent="width=device-width; initial-scale=1.0">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0">
         <meta name="description" content="Site de précommande de menu et de réservation, restaurant de luxe.">
         <title>Ohmyfood!</title>
         <link rel="icon" type="image/png" href="./assets/logo/ohmyfood.png">
@@ -30,7 +30,7 @@
 
         <!-- Location -->
         <div class="location text-align-center">
-            Paris, bellville
+            Paris, belleville
         </div>
 
         <!-- Call to action -->
@@ -48,6 +48,11 @@
                 Explorer nos restaurants
             </button>
         </section>
+
+        <!-- Functioning -->
+        <!-- <section class="functioning">
+            <h2>Fonctionnement</h2>
+        </section> -->
 
         <!-- <footer>
         </footer> -->
