--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width; initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Site de précommande de menu et de réservation, restaurant de luxe.">
         <title>Ohmyfood!</title>
         <link rel="icon" type="image/png" href="./assets/logo/ohmyfood.png">
@@ -16,7 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <!-- Normalize -->
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <!-- Fontaweson -->
+        <!-- Fontawesome -->
         <script src="https://kit.fontawesome.com/e59eb18cc2.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -34,7 +34,7 @@
         </div>
 
         <!-- Call to action -->
-        <section class="call-to-action text-align-center">
+        <section class="call-to-action text-align-center padding-top padding-bottom">
             <h2 class="call-to-action__h2">
                 Réservez le menu qui vous convient
             </h2>
@@ -50,9 +50,19 @@
         </section>
 
         <!-- Functioning -->
-        <!-- <section class="functioning">
+        <section class="functioning padding-top">
             <h2>Fonctionnement</h2>
-        </section> -->
+
+            <div class="container-order">
+                 <!-- Component order -->
+                <div class="comp-order">
+                    <i class="fa-solid fa-mobile-screen-button comp-order__icon"></i>
+                    <h3>
+                        Choisissez un restaurant
+                    </h3>
+                </div>
+            </div>
+        </section>
 
         <!-- <footer>
         </footer> -->
