--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <div class="container-order">
                  <!-- Component order -->
                 <div class="comp-order">
+                    <div class="comp-order__number text-align-center">
+                        1
+                    </div>
                     <i class="fa-solid fa-mobile-screen-button comp-order__icon"></i>
                     <h3>
                         Choisissez un restaurant
