Add icon location.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <!-- Location -->
         <div class="location text-align-center">
+            <i class="fa-sharp fa-solid fa-location-dot"></i>
             Paris, belleville
         </div>
 
