Modification component order, generate other 'order' from component order.

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </section>
 
         <!-- Functioning -->
-        <section class="functioning padding-top">
-            <h2>Fonctionnement</h2>
+        <section class="functioning padding-top padding-bottom">
+            <h2 class="functioning__h2">Fonctionnement</h2>
 
             <div class="container-order">
-                 <!-- Component order -->
+                <!-- Component order -->
                 <div class="comp-order">
                     <div class="comp-order__number text-align-center">
                         1
@@ -63,6 +63,28 @@
                     <i class="fa-solid fa-mobile-screen-button comp-order__icon"></i>
                     <h3>
                         Choisissez un restaurant
+                    </h3>
+                </div>
+
+                <!-- Component order -->
+                <div class="comp-order margin-top-comp-order">
+                    <div class="comp-order__number text-align-center">
+                        2
+                    </div>
+                    <i class="fa-solid fa-bars comp-order__icon"></i>
+                    <h3>
+                        Composez votre menu
+                    </h3>
+                </div>
+
+                <!-- Component order -->
+                <div class="comp-order margin-top-comp-order">
+                    <div class="comp-order__number text-align-center">
+                        3
+                    </div>
+                    <i class="fa-solid fa-store comp-order__icon"></i>
+                    <h3>
+                        Dégustez au restaurant
                     </h3>
                 </div>
             </div>
