Create component restaurants-card.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </section>
 
         <!-- Functioning -->
-        <section class="functioning padding-top padding-bottom">
-            <h2 class="functioning__h2">Fonctionnement</h2>
+        <section class="functioning padding-top padding-bottom padding-left padding-right">
+            <h2 class="margin-bottom-title">Fonctionnement</h2>
 
             <div class="container-order">
                 <!-- Component order -->
@@ -87,6 +87,28 @@
                         Dégustez au restaurant
                     </h3>
                 </div>
+            </div>
+        </section>
+
+        <!-- Restaurants -->
+        <section class="restaurant padding-top padding-bottom padding-left padding-right">
+            <h2 class="margin-bottom-title">Restaurants</h2>
+
+            <div class="container-restaurants-card">
+                <!-- Component restaurants-cards -->
+                <article class="comp-restaurants-card">
+                    <figure class="comp-restaurants-card__image-container">
+                        <img src="./assets/images/la-palette-du-gout.jpg" alt="Restaurant la palette du goût">
+                    </figure>
+
+                    <div class="comp-restaurants-card__description">
+                        <div class="comp-restaurants-card__description__container">
+                            <h3 class="comp-restaurants-card__description__container__h3">La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                    </div>
+                </article>
             </div>
         </section>
 
