Create layout footer.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <!-- Layout header -->
         <header>
-            <h1>ohmyfood</h1>
+            <h1 class="font-family-shrikhand">ohmyfood</h1>
         </header>
 
         <!-- Location -->
@@ -112,7 +112,23 @@
             </div>
         </section>
 
-        <!-- <footer>
-        </footer> -->
+        <!-- Layout footer -->
+        <footer>
+            <nav>
+                <ul class="footer-container">
+                    <li class="footer-container__title font-family-shrikhand">Ohmyfood</li>
+                    <li class="footer-container__li margin-bottom-footer">
+                        <i class="fa-solid fa-utensils footer-container__li__icon"></i>
+                        Proposez un restaurant
+                    </li>
+                    <li class="footer-container__li margin-bottom-footer">
+                        <i class="fa-solid fa-handshake-angle footer-container__li__icon"></i>
+                        Devenir partenaire
+                    </li>
+                    <li class="footer-container__li margin-bottom-footer">Mentions légales</li>
+                    <li class="footer-container__li margin-bottom-footer">Contact</li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
