--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
 
         <!-- Location -->
-        <div class="location text-align-center">
+        <div class="location text-align-center font-weight-bold">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
             Paris, belleville
         </div>
@@ -99,6 +99,9 @@
                 <article class="comp-restaurants-card">
                     <figure class="comp-restaurants-card__image-container">
                         <img src="./assets/images/la-palette-du-gout.jpg" alt="Restaurant la palette du goût">
+                        <div class="comp-restaurants-card__image-container__tags font-weight-bold">
+                            Nouveau
+                        </div>
                     </figure>
 
                     <div class="comp-restaurants-card__description">
