Modification header layout, add icon 'arrow'.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <body>
         <!-- Layout header -->
         <header>
-            <h1 class="font-family-shrikhand">ohmyfood</h1>
+            <i class="fa-solid fa-arrow-left header-icon display-none"></i>
+            <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
         </header>
 
         <!-- Location -->
