Modification component restaurants card.

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
             <div class="container-restaurants-card">
                 <!-- Component restaurants-cards -->
-                <article class="comp-restaurants-card">
+                <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/la-palette-du-gout.jpg" alt="Restaurant la palette du goût">
+                        <img src="./assets/images/la-palette-du-gout.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold">
                             Nouveau
                         </div>
@@ -109,6 +109,60 @@
                         <div class="comp-restaurants-card__description__container">
                             <h3 class="comp-restaurants-card__description__container__h3">La palette du goût</h3>
                             <p>Ménilmontant</p>
+                        </div>
+                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                    </div>
+                </article>
+
+                <!-- Component restaurants-cards -->
+                <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
+                    <figure class="comp-restaurants-card__image-container">
+                        <img src="./assets/images/la-note-enchantee.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <div class="comp-restaurants-card__image-container__tags font-weight-bold">
+                            Nouveau
+                        </div>
+                    </figure>
+
+                    <div class="comp-restaurants-card__description">
+                        <div class="comp-restaurants-card__description__container">
+                            <h3 class="comp-restaurants-card__description__container__h3">La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                    </div>
+                </article>
+                
+                <!-- Component restaurants-cards -->
+                <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
+                    <figure class="comp-restaurants-card__image-container">
+                        <img src="./assets/images/a-la-française.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
+                            Nouveau
+                        </div>
+                    </figure>
+
+                    <div class="comp-restaurants-card__description">
+                        <div class="comp-restaurants-card__description__container">
+                            <h3 class="comp-restaurants-card__description__container__h3">À la française</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                    </div>
+                </article>
+
+                <!-- Component restaurants-cards -->
+                <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
+                    <figure class="comp-restaurants-card__image-container">
+                        <img src="./assets/images/le-delice-des-sens.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
+                            Nouveau
+                        </div>
+                    </figure>
+
+                    <div class="comp-restaurants-card__description">
+                        <div class="comp-restaurants-card__description__container">
+                            <h3 class="comp-restaurants-card__description__container__h3">Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
                         </div>
                         <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
                     </div>
