Fixe issue name image on component restaurants-cards.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <!-- Component restaurants-cards -->
                 <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/a-la-française.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <img src="./assets/images/a-la-francaise.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
                             Nouveau
                         </div>
