Modification alt image of component restaurant card.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <!-- Component restaurants-cards -->
                 <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/la-palette-du-gout.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <img src="./assets/images/la-palette-du-gout.jpg" alt="Plat du restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold">
                             Nouveau
                         </div>
@@ -117,7 +117,7 @@
                 <!-- Component restaurants-cards -->
                 <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/la-note-enchantee.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <img src="./assets/images/la-note-enchantee.jpg" alt="Plat du restaurant la note enchantée" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold">
                             Nouveau
                         </div>
@@ -135,7 +135,7 @@
                 <!-- Component restaurants-cards -->
                 <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/a-la-francaise.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <img src="./assets/images/a-la-francaise.jpg" alt="Plat du restaurant à la Française" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
                             Nouveau
                         </div>
@@ -153,7 +153,7 @@
                 <!-- Component restaurants-cards -->
                 <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
                     <figure class="comp-restaurants-card__image-container">
-                        <img src="./assets/images/le-delice-des-sens.jpg" alt="Restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                        <img src="./assets/images/le-delice-des-sens.jpg" alt="Plat du restaurant le délice des sens" class="comp-restaurants-card__image-container__image">
                         <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
                             Nouveau
                         </div>
