Create section menu.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -28,9 +28,15 @@
             <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
         </header>
 
+        <!-- Image use for background -->
         <figcaption>
             <img src="./assets/images/a-la-francaise.jpg" alt="Plat du resstaurant à la Française">
         </figcaption>
+
+        <!-- Layout menu -->
+        <section class="menu font-family-shrikhand font-weight-bold">
+            <h2>À la française</h2>
+        </section>
 
         <!-- Layout footer -->
         <footer>
