Modification h2 base font-weight normal by default.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <!-- Call to action -->
         <section class="call-to-action text-align-center padding-top padding-bottom">
-            <h2 class="call-to-action__h2">
+            <h2 class="call-to-action__h2 font-weight-bold">
                 Réservez le menu qui vous convient
             </h2>
 
@@ -53,7 +53,7 @@
 
         <!-- Functioning -->
         <section class="functioning padding-top padding-bottom padding-left padding-right">
-            <h2 class="margin-bottom-title">Fonctionnement</h2>
+            <h2 class="margin-bottom-title font-weight-bold">Fonctionnement</h2>
 
             <div class="container-order">
                 <!-- Component order -->
@@ -93,7 +93,7 @@
 
         <!-- Restaurants -->
         <section class="restaurant padding-top padding-bottom padding-left padding-right">
-            <h2 class="margin-bottom-title">Restaurants</h2>
+            <h2 class="margin-bottom-title font-weight-bold">Restaurants</h2>
 
             <div class="container-restaurants-card">
                 <!-- Component restaurants-cards -->
