Modification css h3 base.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         1
                     </div>
                     <i class="fa-solid fa-mobile-screen-button comp-order__icon"></i>
-                    <h3>
+                    <h3 class="font-weight-bold">
                         Choisissez un restaurant
                     </h3>
                 </div>
@@ -73,7 +73,7 @@
                         2
                     </div>
                     <i class="fa-solid fa-bars comp-order__icon"></i>
-                    <h3>
+                    <h3 class="font-weight-bold">
                         Composez votre menu
                     </h3>
                 </div>
@@ -84,7 +84,7 @@
                         3
                     </div>
                     <i class="fa-solid fa-store comp-order__icon"></i>
-                    <h3>
+                    <h3 class="font-weight-bold">
                         Dégustez au restaurant
                     </h3>
                 </div>
@@ -107,7 +107,7 @@
 
                     <div class="comp-restaurants-card__description">
                         <div class="comp-restaurants-card__description__container">
-                            <h3 class="comp-restaurants-card__description__container__h3">La palette du goût</h3>
+                            <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
                         <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
@@ -125,7 +125,7 @@
 
                     <div class="comp-restaurants-card__description">
                         <div class="comp-restaurants-card__description__container">
-                            <h3 class="comp-restaurants-card__description__container__h3">La note enchantée</h3>
+                            <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
                         <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
@@ -143,7 +143,7 @@
 
                     <div class="comp-restaurants-card__description">
                         <div class="comp-restaurants-card__description__container">
-                            <h3 class="comp-restaurants-card__description__container__h3">À la française</h3>
+                            <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">À la française</h3>
                             <p>Charonne</p>
                         </div>
                         <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
@@ -161,7 +161,7 @@
 
                     <div class="comp-restaurants-card__description">
                         <div class="comp-restaurants-card__description__container">
-                            <h3 class="comp-restaurants-card__description__container__h3">Le délice des sens</h3>
+                            <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
                         <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
