Create starter dishs.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -28,27 +28,66 @@
             <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
         </header>
 
-        <div class="container">
-            <!-- Image use for background -->
-            <figcaption class="container__figcaption">
-                <img src="./assets/images/a-la-francaise.jpg" alt="Plat du resstaurant à la Française">
-            </figcaption>
+        <main>
+            <div class="container">
+                <!-- Image use for background -->
+                <figcaption class="container__figcaption">
+                    <img src="./assets/images/a-la-francaise.jpg" alt="Plat du resstaurant à la Française">
+                </figcaption>
 
-            <!-- Layout menu -->
-            <section class="container__menu">
-                <div class="container__menu__title font-family-shrikhand font-weight-bold">
-                    <h2 class="container__menu__title__h2">À la française</h2>
-                    <i class="fa-regular fa-heart container__menu__title__icon"></i>
-                </div>
+                <!-- Layout menu -->
+                <section class="container__menu">
+                    <div class="container__menu__title font-family-shrikhand font-weight-bold">
+                        <h2 class="container__menu__title__h2">À la française</h2>
+                        <i class="fa-regular fa-heart container__menu__title__icon"></i>
+                    </div>
 
-                <h3>ENTRÉES</h3>
-                <ul>
-                    <li>
-                        
-                    </li>
-                </ul>
-            </section>
-        </div>
+                    <!-- Starter dishs -->
+                    <h3 class="container__menu__h3">ENTRÉES</h3>
+                    <div class="container__menu__design-element"></div>
+
+                    <ul class="container__menu__ul">
+                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Tartare de poulpe acidulé
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Aux zestes d'orange 
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    25€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Velouté de légumes d'antan
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Carotte, panais, topinambour
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    35€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__starter-dish">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Soupe à l'oignon
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Revisitée
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    20€
+                                </span>
+                            </p>
+                        </li>
+                    </ul>
+
+                    
+                </section>
+            </div>
+        </main>
 
         <div class="footer-page-menu-francaise">
             <!-- Layout footer -->
