--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -84,7 +84,47 @@
                         </li>
                     </ul>
 
-                    
+                    <!-- Dishs -->
+                    <h3 class="container__menu__h3">PLATS</h3>
+                    <div class="container__menu__design-element"></div>
+
+                    <ul class="container__menu__ul">
+                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Coquilles Saint-Jacques
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Accompagnées d'une purée de panais
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    40€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Magret de canard
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Et parmentier de pommes de terre
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    35€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__starter-dish">
+                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                                Pigeonneau d'Ille-et-Vilaine
+                            </h4>
+                            <p class="container__menu__ul__starter-dish__details">
+                                Sur son lit de gnocchis aux légumes
+                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                    44€
+                                </span>
+                            </p>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </main>
