Create Dessert and add component call to action button.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -47,37 +47,37 @@
                     <div class="container__menu__design-element"></div>
 
                     <ul class="container__menu__ul">
-                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Tartare de poulpe acidulé
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Aux zestes d'orange 
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     25€
                                 </span>
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Velouté de légumes d'antan
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Carotte, panais, topinambour
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     35€
                                 </span>
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__starter-dish">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Soupe à l'oignon
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Revisitée
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     20€
                                 </span>
                             </p>
@@ -89,46 +89,97 @@
                     <div class="container__menu__design-element"></div>
 
                     <ul class="container__menu__ul">
-                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Coquilles Saint-Jacques
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Accompagnées d'une purée de panais
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     40€
                                 </span>
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__starter-dish margin-bottom-layout-menu">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Magret de canard
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Et parmentier de pommes de terre
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     35€
                                 </span>
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__starter-dish">
-                            <h4 class="container__menu__ul__starter-dish__name font-weight-bold">
+                        <li class="container__menu__ul__li">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Pigeonneau d'Ille-et-Vilaine
                             </h4>
-                            <p class="container__menu__ul__starter-dish__details">
+                            <p class="container__menu__ul__li__details">
                                 Sur son lit de gnocchis aux légumes
-                                <span class="container__menu__ul__starter-dish__details__price font-weight-bold">
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
                                     44€
                                 </span>
                             </p>
                         </li>
                     </ul>
+
+                    <!-- Dessert -->
+                    <h3 class="container__menu__h3">DESSERTS</h3>
+                    <div class="container__menu__design-element"></div>
+
+                    <ul class="container__menu__ul">
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
+                                Pétales de violettes glacés
+                            </h4>
+                            <p class="container__menu__ul__li__details">
+                                Et purée de noisettes
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
+                                    18€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
+                                Fondant au chocolat
+                            </h4>
+                            <p class="container__menu__ul__li__details">
+                                Revisité
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
+                                    22€
+                                </span>
+                            </p>
+                        </li>
+
+                        <li class="container__menu__ul__li">
+                            <h4 class="container__menu__ul__li__name font-weight-bold">
+                                Millefeuille croustillant
+                            </h4>
+                            <p class="container__menu__ul__li__details">
+                                Myrtilles et pâte d’amande
+                                <span class="container__menu__ul__li__details__price font-weight-bold">
+                                    23€
+                                </span>
+                            </p>
+                        </li>
+                    </ul>
+
+                    <!-- Div for center the component -->
+                    <div class="comp-container-page">
+                        <!-- Component call to action button -->
+                        <button class="comp-call-to-action-btn call-to-action-btn-modif-page">
+                            Commander
+                        </button>
+                    </div>
                 </section>
             </div>
         </main>
 
+        <!-- Div for position relative -->
         <div class="footer-page-menu-francaise">
             <!-- Layout footer -->
             <footer>
