--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -39,7 +39,10 @@
                 <section class="container__menu">
                     <div class="container__menu__title font-family-shrikhand font-weight-bold">
                         <h2 class="container__menu__title__h2">À la française</h2>
-                        <i class="fa-regular fa-heart container__menu__title__icon"></i>
+                        <div class="container__menu__title__favories">
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </div>
 
                     <!-- Starter dishs -->
